kozo/src/typecheck/snapshots/kozo__typecheck__tests__add_2_3.snap
---
source: src/typecheck/tests.rs
expression: PrettyPrinted(type_.raw())
---
(
    ind
    Type0
    "Nat"
    ()
    (
        (
            ()
            ()
        )
        (
            (
                0
            )
            ()
        )
    )
)
