kozo/src/typecheck/snapshots/kozo__typecheck__tests__add_succ.snap
---
source: src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            ind
            Type0
            "Nat"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    (
                        0
                    )
                    ()
                )
            )
        )
        (
            ind
            Type0
            "Nat"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    (
                        0
                    )
                    ()
                )
            )
        )
    )
    (
        (
            ind
            Type0
            "Eq"
            (
                (
                    ind
                    Type0
                    "Nat"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            (
                                0
                            )
                            ()
                        )
                    )
                )
            )
            (
                (
                    ()
                    (
                        (
                            (
                                fun
                                0
                                (
                                    (
                                        ind
                                        Type0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                    (
                                        ind
                                        Type0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                )
                                (
                                    ind
                                    Type0
                                    "Nat"
                                    ()
                                    (
                                        (
                                            ()
                                            ()
                                        )
                                        (
                                            (
                                                0
                                            )
                                            ()
                                        )
                                    )
                                )
                                (
                                    match
                                    2
                                    (
                                        ind
                                        Type0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                    (
                                        (
                                            0
                                            1
                                        )
                                        (
                                            1
                                            (
                                                (
                                                    vcon
                                                    (
                                                        ind
                                                        Type0
                                                        "Nat"
                                                        ()
                                                        (
                                                            (
                                                                ()
                                                                ()
                                                            )
                                                            (
                                                                (
                                                                    0
                                                                )
                                                                ()
                                                            )
                                                        )
                                                    )
                                                    1
                                                )
                                                (
                                                    1
                                                    0
                                                    2
                                                )
                                            )
                                        )
                                    )
                                )
                            )
                            2
                            (
                                (
                                    vcon
                                    (
                                        ind
                                        Type0
                                        "Nat"
                                        ()
                                        (
                                            (
                                                ()
                                                ()
                                            )
                                            (
                                                (
                                                    0
                                                )
                                                ()
                                            )
                                        )
                                    )
                                    1
                                )
                                1
                            )
                        )
                    )
                )
            )
        )
        (
            (
                vcon
                (
                    ind
                    Type0
                    "Nat"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            (
                                0
                            )
                            ()
                        )
                    )
                )
                1
            )
            (
                (
                    fun
                    0
                    (
                        (
                            ind
                            Type0
                            "Nat"
                            ()
                            (
                                (
                                    ()
                                    ()
                                )
                                (
                                    (
                                        0
                                    )
                                    ()
                                )
                            )
                        )
                        (
                            ind
                            Type0
                            "Nat"
                            ()
                            (
                                (
                                    ()
                                    ()
                                )
                                (
                                    (
                                        0
                                    )
                                    ()
                                )
                            )
                        )
                    )
                    (
                        ind
                        Type0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                    (
                        match
                        2
                        (
                            ind
                            Type0
                            "Nat"
                            ()
                            (
                                (
                                    ()
                                    ()
                                )
                                (
                                    (
                                        0
                                    )
                                    ()
                                )
                            )
                        )
                        (
                            (
                                0
                                1
                            )
                            (
                                1
                                (
                                    (
                                        vcon
                                        (
                                            ind
                                            Type0
                                            "Nat"
                                            ()
                                            (
                                                (
                                                    ()
                                                    ()
                                                )
                                                (
                                                    (
                                                        0
                                                    )
                                                    ()
                                                )
                                            )
                                        )
                                        1
                                    )
                                    (
                                        1
                                        0
                                        2
                                    )
                                )
                            )
                        )
                    )
                )
                1
                0
            )
        )
    )
)
