kozo/src/typecheck/snapshots/kozo__typecheck__tests__can_handle_matchee_type_that_is_only_inductive_after_applying_scon.snap
---
source: src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            (
                ind
                Type1
                "Precise"
                (
                    Type0
                    0
                )
                (
                    (
                        (
                            Type0
                            0
                        )
                        (
                            1
                            0
                        )
                    )
                )
            )
            (
                ind
                Type0
                "Bool"
                ()
                (
                    (
                        ()
                        ()
                    )
                    (
                        ()
                        ()
                    )
                )
            )
            (
                vcon
                (
                    ind
                    Type0
                    "Bool"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            ()
                            ()
                        )
                    )
                )
                0
            )
        )
    )
    (
        ind
        Type0
        "Bool"
        ()
        (
            (
                ()
                ()
            )
            (
                ()
                ()
            )
        )
    )
)
