kozo/src/typecheck/snapshots/kozo__typecheck__tests__eq_commutative.snap
---
source: src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            ind
            Type0
            "Bool"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            ind
            Type0
            "Bool"
            ()
            (
                (
                    ()
                    ()
                )
                (
                    ()
                    ()
                )
            )
        )
        (
            (
                ind
                Type0
                "Eq"
                (
                    (
                        ind
                        Type0
                        "Bool"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                    (
                        ind
                        Type0
                        "Bool"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                ()
                                ()
                            )
                        )
                    )
                )
                (
                    (
                        (
                            (
                                ind
                                Type0
                                "Bool"
                                ()
                                (
                                    (
                                        ()
                                        ()
                                    )
                                    (
                                        ()
                                        ()
                                    )
                                )
                            )
                        )
                        (
                            0
                            0
                        )
                    )
                )
            )
            1
            0
        )
    )
    (
        (
            ind
            Type0
            "Eq"
            (
                (
                    ind
                    Type0
                    "Bool"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            ()
                            ()
                        )
                    )
                )
                (
                    ind
                    Type0
                    "Bool"
                    ()
                    (
                        (
                            ()
                            ()
                        )
                        (
                            ()
                            ()
                        )
                    )
                )
            )
            (
                (
                    (
                        (
                            ind
                            Type0
                            "Bool"
                            ()
                            (
                                (
                                    ()
                                    ()
                                )
                                (
                                    ()
                                    ()
                                )
                            )
                        )
                    )
                    (
                        0
                        0
                    )
                )
            )
        )
        1
        2
    )
)
