kozo/src/typecheck/snapshots/kozo__typecheck__tests__eq_zero_one.snap
---
source: src/typecheck/tests.rs
expression: PrettyPrinted(type_.raw())
---
(
    for
    (
        (
            (
                ind
                Type0
                "Eq0"
                (
                    (
                        ind
                        Type0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                )
                (
                    (
                        ()
                        (
                            (
                                vcon
                                (
                                    ind
                                    Type0
                                    "Nat"
                                    ()
                                    (
                                        (
                                            ()
                                            ()
                                        )
                                        (
                                            (
                                                0
                                            )
                                            ()
                                        )
                                    )
                                )
                                0
                            )
                        )
                    )
                )
            )
            (
                (
                    vcon
                    (
                        ind
                        Type0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                    1
                )
                (
                    vcon
                    (
                        ind
                        Type0
                        "Nat"
                        ()
                        (
                            (
                                ()
                                ()
                            )
                            (
                                (
                                    0
                                )
                                ()
                            )
                        )
                    )
                    0
                )
            )
        )
    )
    (
        ind
        Type0
        "False"
        ()
        ()
    )
)
