kozo/src/typecheck/snapshots/kozo__typecheck__tests__ex_falso.snap
---
source: src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        (
            ind
            Type0
            "False"
            ()
            ()
        )
    )
    (
        ind
        Type0
        "Nat"
        ()
        (
            (
                ()
                ()
            )
            (
                (
                    0
                )
                ()
            )
        )
    )
)
