kozo/src/typecheck/snapshots/kozo__typecheck__tests__index_arg_types_are_compared_against_substituted_written_index_types.snap
---
source: src/typecheck/tests.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        Type0
        0
    )
    Type1
)
